Fix hidden overflow of page contents

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,8 +53,6 @@ button:hover {
     width: 100%;
     height: 100%;
 
-    overflow-y: auto;
-
     grid-column: 1 / 2;
     grid-row: 3 / 4;
     
